force-app/main/default/objects/PurchaseLine__c/PurchaseLine__c.object-meta.xml
<CustomObject>
    <description
  >The Purchase Line object is a child of Purchase and Item (both master-detail). It records Amount and Unit Cost per line item. Triggers on this object roll up TotalItems and GrandTotal to the parent Purchase. Commonly used for itemized order tracking and cost calculation.</description>
    <label>Purchase Line</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Purchase Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>