force-app/main/default/objects/PurchaseLine__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >Quantity of the item included in this purchase line</description>
    <inlineHelpText>Enter the number of units being purchased</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>