force-app/main/default/objects/PurchaseLine__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description
  >Master-detail relationship to the Item being purchased on this line</description>
    <inlineHelpText
  >The catalog item associated with this purchase line</inlineHelpText>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>ItemPurchaseLines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>