force-app/main/default/objects/PurchaseLine__c/fields/PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>PurchaseId__c</fullName>
    <description
  >Master-detail relationship to the parent Purchase record</description>
    <inlineHelpText>The purchase this line item belongs to</inlineHelpText>
    <label>Purchase</label>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>PurchaseLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>