force-app/main/default/objects/PurchaseLine__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Price per unit at the time of purchase, copied from Item price</description>
    <inlineHelpText>Cost per unit at the time of purchase</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>